Fix: subject filter buttons should not be sticky on narrow desktop

--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -72,7 +72,8 @@
             top: 9rem;
 
             @include desktop {
-                position: static;
+                position: absolute;
+                top: inherit;
             }
         }
     }
